devops/steps/003_cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cache
  name: cache-service
  namespace: default
spec:
  ports:
  - port: 11211
    protocol: TCP
    targetPort: 11211
  selector:
    app: cache
  sessionAffinity: None
  type: ClusterIP
