devops/steps/004_client-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-api-service
  namespace: default
  labels:
    app: client-api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: client-api
  type: ClusterIP
