devops/steps/006_client-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-web-service
  namespace: default
  labels:
    app: client-web
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: client-web
  type: ClusterIP
