devops/steps/005_client-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-api-ingress
  namespace: default
spec:
  backend:
    serviceName: client-api-service
    servicePort: 80
