devops/steps/007_client-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-web-ingress
  namespace: default
spec:
  backend:
    serviceName: client-web-service
    servicePort: 80
